--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/core": "^14.2.10",
     "@angular/animations": "~14.2.12",
     "@angular/cdk": "^14.2.7",
     "@angular/common": "~14.2.12",
@@ -29,9 +30,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.3",
+    "@angular-devkit/build-angular": "~14.2.10",
     "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "~13.1.0",
+    "@angular/compiler-cli": "~14.2.12",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
@@ -40,6 +41,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.6.4"
   }
 }
